--- a/package.json
+++ b/package.json
@@ -39,7 +39,13 @@
   "devDependencies": {
     "commitizen": "^4.2.4",
     "cz-conventional-changelog-emoji": "^0.1.0",
-    "cz-emoji": "^1.3.1"
+    "cz-emoji": "^1.3.1",
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0"
   },
   "config": {
     "commitizen": {
