--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "eslint": "eslint --ignore-path .gitignore .",
+    "prettier": "prettier --write '**/*.{js,jsx,json}' --ignore-path .gitignore",
     "commit": "cz"
   },
   "eslintConfig": {
