--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.18.6",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog-emoji": "^0.1.0",
     "cz-emoji": "^1.3.1",
