--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Install project
         run: npm install
+      - name: Run ESLint
+        run: eslint --ignore-path .gitignore .
       - name: Build the project
         run: npm run build --if-present
       - name: Run tests
