--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,10 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install project
-        run: npm install
-      - name: Build the project
-        run: npm run build --if-present
+        run: yarn install
       - name: Run ESLint
-        run: eslint --ignore-path .gitignore .
+        run: yarn eslint
+      - name: Build the project
+        run: yarn run build --if-present
       - name: Run tests
-        run: npm test
+        run: yarn test
