--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,12 @@
   "settings": {
     "react": {
       "version": "detect"
+    },
+    "import/resolver": {
+      "node": {
+          "extensions": [".js", ".jsx", ".ts", ".tsx"],
+          "moduleDirectory": ["node_modules", "src/"]
+      }
     }
   },
   "parserOptions": {
