--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --coverage=true --coverageReporters=cobertura",
     "eject": "react-scripts eject",
     "eslint": "eslint --ignore-path .gitignore .",
     "prettier": "prettier --write '**/*.{js,jsx,json}' --ignore-path .gitignore",
@@ -46,8 +46,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^28.1.2",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog-emoji": "^0.1.0",
     "cz-emoji": "^1.3.1",
@@ -60,11 +62,18 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-standard": "^5.0.0",
-    "prettier": "^2.7.1"
+    "jest": "^28.1.2",
+    "jest-environment-jsdom": "^28.1.2",
+    "prettier": "^2.7.1",
+    "react-test-renderer": "^18.2.0"
   },
   "config": {
     "commitizen": {
       "path": "cz-conventional-changelog-emoji"
     }
+  },
+  "jest": {
+    "verbose": true,
+    "testEnvironment": "jsdom"
   }
 }
